--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <form action="?" method="POST">
-      <div class="g-recaptcha" data-sitekey="your_site_key"></div>
+      <div class="g-recaptcha" data-sitekey="6LdifIUoAAAAANEycHVcekn8oDVtJM1vOW-Y8_zj"></div>
       <br/>
       <input type="submit" value="Submit">
     </form>
